<resources>
    <string name="app_name">Hungry Bears</string>
    <string name="name_field_label">Name</string>
    <string name="first_run_prompt">Please select your current meal point plan: <br /></string>
    <string-array name="meal_plans">
        <item>Standard</item>
        <item>Premium</item>
        <item>Ultimate Access</item>
        <item>Non-Resident: Blue</item>
        <item>Non-Resident: Gold</item>
        <item>Non-Resident: Platinum</item>
        <item>Other</item>
    </string-array>
    <string name="next_button">Next</string>

    <string name="add_trans">Add Transaction</string>
    <string name="date">Date: </string>
    <string name="amount">Amount Spent: </string>
    <string name="store">Store: </string>
    <string-array name="stores">
        <item>DC - Cafe 3</item>
        <item>DC - Clark Kerr</item>
        <item>DC - Crossroads</item>
        <item>DC - Foothill</item>
        <item>Common Grounds</item>
        <item>Concession Stand</item>
        <item>GBC Produce Stand</item>
        <item>Golden Bear</item>
        <item>Pat Brown\'s</item>
        <item>Qualcomm Cybercafe</item>
        <item>Ramona\'s</item>
        <item>Terrace Cafe</item>
        <item>The Pro Shop</item>
    </string-array>
    <string name="add_button">Add!</string>
</resources>
